--- a/index.html
+++ b/index.html
@@ -8,9 +8,8 @@ p { text-indent: 25px; }
 </head>
 <body>
 <h1 align="center"><b>Наш город - Санкт-Петербург</h1></b>
-<h2>--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------</h2>
-<h3 align="center"><b>Северная столица… город белых ночей и разводных мостов, прекрасных дворцов, различных достопримечательностей и богатой истории в лицах..</h3></b>
-<h2>--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------</h2>
+<hr color="black"><h3 align="center"><b>Северная столица… город белых ночей и разводных мостов, прекрасных дворцов, различных достопримечательностей и богатой истории в лицах..</h3></b>
+<hr color="black">
 <center><img src="stp.jpg" width="800" height="550"></center>
 <h2 align="center"><b>История</h2></b>
 <h3 align="center"><b><u>Основание города</h3></b></u>
